Bill tracker app

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,10 +9,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".SummaryActivity"></activity>
-        <activity android:name=".AllBillsListActivity" />
-        <activity android:name=".MainActivity"
-            android:exported="true">
+        <activity
+            android:name=".SummaryActivity"
+            android:screenOrientation="portrait"></activity>
+        <activity
+            android:name=".AllBillsListActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".MainActivity"
+            android:exported="true"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
